--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,36 +1,31 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Arkcode
+description: 欢迎来到 Arkcode 组织的的文档站点。如果你对与 Electron / vscode 和 HarmonyOS 相关的话题感兴趣，欢迎加入我们一起讨论。
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
-  image:
-    file: ../../assets/houston.webp
+  tagline: 欢迎来到 Arkcode 组织的文档站点。如果你对与 Electron / vscode 和 HarmonyOS 相关的话题感兴趣，欢迎加入我们一起讨论。
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: 创建 Electron on HarmonyOS 项目
+      link: /create-project/example/
       icon: right-arrow
-    - text: Read the Starlight docs
+    - text: 安装 ArkTS vscode 插件
       link: https://starlight.astro.build
       icon: external
-      variant: minimal
+      variant: secondary
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+## 正在进行的项目
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
+	<Card title="vscode ArkTS 插件" icon="puzzle">
+		一个 VSCode 插件，旨在为 `.ets` 语言提供更好的支持。[点击前往仓库](https://github.com/Groupguanfang/arkTS)
 	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
+	<Card title="Electron for HarmonyOS" icon="seti:react">
+		这是一个模版项目, 旨在让更多人了解如何把`Electron`应用程序移植到`HarmonyOS`上。[点击前往仓库](https://github.com/ohosvscode/ohos_electron_hap)
 	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
+	<Card title="CLI" icon="seti:shell">
+		用于`创建`和 `bundle` Electron on HarmonyOS 项目的命令行工具, 基于`tsdown`和`electron-builder`。[点击前往仓库](https://github.com/ohosvscode/cli)
 	</Card>
 </CardGrid>
