feat: update homepage

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -25,7 +25,10 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<Card title="Electron for HarmonyOS" icon="seti:react">
 		这是一个模版项目, 旨在让更多人了解如何把`Electron`应用程序移植到`HarmonyOS`上。[点击前往仓库](https://github.com/ohosvscode/ohos_electron_hap)
 	</Card>
-	<Card title="CLI" icon="seti:shell">
-		用于`创建`和 `bundle` Electron on HarmonyOS 项目的命令行工具, 基于`tsdown`和`electron-builder`。[点击前往仓库](https://github.com/ohosvscode/cli)
-	</Card>
+  <Card title="Hvigor Project Detector" icon="magnifier">
+    基于 `Rust` 写的项目检测工具，指定一个基础工作目录，扫描此目录下所有鸿蒙工程。并提供 NAPI 绑定到TypeScript。[点击前往仓库](https://github.com/ohosvscode/project-detector)
+  </Card>
+  <Card title="OpenHarmony SDK Downloader" icon="download">
+    一个用于下载 OpenHarmony SDK 的工具, 支持下载指定API版本和指定架构的 SDK，并提供 `github action` 直接用于你的 CI/CD 流水线中。[点击前往仓库](https://github.com/ohosvscode/sdk-downloader)
+  </Card>
 </CardGrid>
