--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,11 +5,11 @@ template: splash
 hero:
   tagline: 欢迎来到 Arkcode 组织的文档站点。如果你对与 Electron / vscode 和 HarmonyOS 相关的话题感兴趣，欢迎加入我们一起讨论。
   actions:
+    - text: 安装 ArkTS vscode 插件
+      link: /arkts/install
+      icon: right-arrow
     - text: 创建 Electron on HarmonyOS 项目
       link: https://github.com/ohosvscode/ohos_electron_hap
-      icon: right-arrow
-    - text: 安装 ArkTS vscode 插件
-      link: https://github.com/Groupguanfang/arkTS
       icon: external
       variant: secondary
 ---
