feat: update homepage

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -31,4 +31,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
   <Card title="OpenHarmony SDK Downloader" icon="download">
     一个用于下载 OpenHarmony SDK 的工具, 支持下载指定API版本和指定架构的 SDK，并提供 `github action` 直接用于你的 CI/CD 流水线中。[点击前往仓库](https://github.com/ohosvscode/sdk-downloader)
   </Card>
+  <Card title="Twoslash for ArkTS" icon="download">
+    (开发中...) [twoslash](https://github.com/twoslashes/twoslash) 的 `ArkTS` 语言支持，用于在文档中预先生成丰富类型信息的标记。[点击前往仓库](https://github.com/ohosvscode/twoslash)
+  </Card>
 </CardGrid>
