feat: add logo, update style.css

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -4,6 +4,8 @@ description: 欢迎来到 Arkcode 组织的的文档站点。如果你对与 Ele
 template: splash
 hero:
   tagline: 欢迎来到 Arkcode 组织的文档站点。如果你对与 Electron / vscode 和 HarmonyOS 相关的话题感兴趣，欢迎加入我们一起讨论。
+  image:
+    file: ../../assets/logo.png
   actions:
     - text: 安装 ArkTS vscode 插件
       link: /arkts/install
