--- a/src/content/docs/twoslash/guide.mdx
+++ b/src/content/docs/twoslash/guide.mdx
@@ -1,5 +1,58 @@
 ---
-title: Twoslash for ArkTS 使用指南
+title: 开始使用
 ---
+
+import { Tabs, TabItem } from '@astrojs/starlight/components';
+
+`Twoslash` 是由 [Orta Therox](https://orta.io) 和 [Anthony Fu](https://antfu.me) 两位大佬推出的一套为 `文档` 和 `TypeScript 示例代码` 增强语义信息的工具，能够在为基于 `Markdown` 的文档框架（如 [VitePress](https://vitepress.dev) 和 [Astro Starlight](https://starlight.astro.build) 等）在网页文档中即时渲染和 `vscode` 几乎一模一样的 `代码提示`、`补全`、`错误提示` 等语义信息。现在，我们把它带到了 `ArkTS` 语言中，让 `ArkTS` 语言的文档和示例代码也拥有同样的体验！
+
+下面是一个简单的 `ArkTS Twoslash` 示例，我们这个文档是基于 `Astro Starlight` 框架构建的，因此允许开箱即用:
+
+<Tabs>
+  <TabItem label="Twoslash 渲染">
+    ```ets twoslash
+    @Entry
+    @Component
+    struct Index {
+      build(): void {
+        Column() {
+          Text('Hello, World!')
+        }.width('100%')
+        .height('100%')
+      }
+    }
+    ```
+  </TabItem>
+  <TabItem label="Markdown 原始代码">
+  ```ets
+  @Entry
+  @Component
+  struct Index {
+    build(): void {
+      Column() {
+        Text('Hello, World!')
+      }.width('100%')
+      .height('100%')
+    }
+  }
+  ```
+  </TabItem>
+</Tabs>
+
+同时，原版的 `TypeScript Twoslash` 也完全没有任何冲突：
+
+```ts twoslash
+function add(a: number, b: number): number {
+  return a + b;
+}
+
+add(1, 2);
+```
+
+`TSX` 语法也完全没有任何问题：
+
+```tsx twoslash
+const a = <div>Hello, World!</div>;
+```
 
 TODO
