feat: update docs

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -22,7 +22,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 <CardGrid stagger>
 	<Card title="vscode ArkTS 插件" icon="puzzle">
-		一个 VSCode 插件，旨在为 `.ets` 语言提供更好的支持。[点击前往仓库](https://github.com/Groupguanfang/arkTS)
+		一个 VSCode 插件，旨在为 `.ets` 语言和 `hvigor` 项目提供基础语言功能支持，如代码补全、高亮、错误提示、引用跳转等。[点击前往仓库](https://github.com/Groupguanfang/arkTS)  [点击查看文档](/arkts/install)
 	</Card>
 	<Card title="Electron for HarmonyOS" icon="seti:react">
 		这是一个模版项目, 旨在让更多人了解如何把`Electron`应用程序移植到`HarmonyOS`上。[点击前往仓库](https://github.com/ohosvscode/ohos_electron_hap)
@@ -34,6 +34,6 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
     一个用于下载 OpenHarmony SDK 的工具, 支持下载指定API版本和指定架构的 SDK，并提供 `github action` 直接用于你的 CI/CD 流水线中。[点击前往仓库](https://github.com/ohosvscode/sdk-downloader)
   </Card>
   <Card title="Twoslash for ArkTS" icon="seti:shell">
-    (开发中...) [twoslash](https://github.com/twoslashes/twoslash) 的 `ArkTS` 语言支持，用于在文档中预先生成丰富类型信息的标记。[点击前往仓库](https://github.com/ohosvscode/twoslash)
+    (开发中...) [twoslash](/twoslash/guide) 的 `ArkTS` 语言支持，用于在文档中预先生成丰富类型信息的标记。[点击前往仓库](https://github.com/ohosvscode/twoslash)
   </Card>
 </CardGrid>
