--- a/src/content/docs/twoslash/guide.mdx
+++ b/src/content/docs/twoslash/guide.mdx
@@ -4,9 +4,14 @@ sidebar:
   order: 1
 ---
 
-import { Tabs, TabItem, LinkCard } from '@astrojs/starlight/components';
+import { Tabs, TabItem, LinkCard, CardGrid } from '@astrojs/starlight/components';
 
 `Twoslash` 是由 [Orta Therox](https://orta.io) 和 [Anthony Fu](https://antfu.me) 两位大佬推出的一套为 `文档` 和 `TypeScript 示例代码` 增强语义信息的工具，能够在为基于 `Markdown` 的文档框架（如 [VitePress](https://vitepress.dev) 和 [Astro Starlight](https://starlight.astro.build) 等）在网页文档中即时渲染和 `vscode` 几乎一模一样的 `代码提示`、`补全`、`错误提示` 等语义信息。现在，我们把它带到了 `ArkTS` 语言中，让 `ArkTS` 语言的文档和示例代码也拥有同样的体验！
+
+<CardGrid>
+  <LinkCard title="Twoslash 仓库" description="点击前往 Twoslash for ArkTS 核心仓库。" href="https://github.com/ohosvscode/twoslash" target="_blank" />
+  <LinkCard title="Twoslash for expressive code" description="点击前往 Twoslash for expressive code 适配器仓库。" href="https://github.com/ohosvscode/twoslash-expressive-code" target="_blank" />
+</CardGrid>
 
 下面是一个简单的 `ArkTS Twoslash` 示例，我们这个文档是基于 `Astro Starlight` 框架构建的，因此允许开箱即用。您可以将鼠标移到代码上（如果您使用的移动端设备，可以点击一下代码段），如下面的 `struct Index` 的 `Index`, 以及 `@Component` 的 `Component` 等，都会出现对应的语义信息：
 
