feat: update docs

--- a/src/content/docs/twoslash/guide.mdx
+++ b/src/content/docs/twoslash/guide.mdx
@@ -2,6 +2,11 @@
 title: 介绍与使用
 sidebar:
   order: 1
+hero:
+  title: Twoslash + ArkTS
+  description: 让 ArkTS 语言的文档和示例代码和 `TypeScript` 语言的文档和示例代码一样，拥有丰富的语义信息。
+  image:
+    html: <img src="/images/twoslash-plus-arkts.svg" alt="Twoslash plus ArkTS" class="w-full md:max-w-sm" />
 ---
 
 import { Tabs, TabItem, LinkCard, CardGrid } from '@astrojs/starlight/components';
