chore: update index.mdx

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -34,6 +34,9 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
     一个用于下载 OpenHarmony SDK 的工具, 支持下载指定API版本和指定架构的 SDK，并提供 `github action` 直接用于你的 CI/CD 流水线中。[点击前往仓库](https://github.com/ohosvscode/sdk-downloader)
   </Card>
   <Card title="Twoslash for ArkTS" icon="seti:shell">
-    (开发中...) [twoslash](/twoslash/guide) 的 `ArkTS` 语言支持，用于在文档中预先生成丰富类型信息的标记。[点击前往仓库](https://github.com/ohosvscode/twoslash)
+    [twoslash](/twoslash/guide) 的 `ArkTS` 语言支持，用于在文档中预先生成丰富类型信息的标记。[点击前往仓库](https://github.com/ohosvscode/twoslash)
+  </Card>
+  <Card title="Visual Studio Code on HarmonyOS PC" icon="vscode">
+    (开发中...) 运行在鸿蒙 PC 上的 `Visual Studio Code`, 目前仍然在开发中，详见 [仓库](https://github.com/ohosvscode/vscode)。
   </Card>
 </CardGrid>
