feat: update architecture.mdx

--- a/src/content/docs/arkts/architecture.mdx
+++ b/src/content/docs/arkts/architecture.mdx
@@ -28,10 +28,10 @@ flowchart TD
 下面是一些独立仓库项目，由于一些原因（如：该功能通过逆向 `DevEco Studio` 本身）因此没有放在 [ohosvscode/arkTS](https://github.com/ohosvscode/arkTS) 仓库中，而是独立成一个仓库，方便其他开发者研究学习使用。
 
 <CardGrid>
-  <LinkCard title="@arkts/debugger" href="https://github.com/ohosvscode/debugger" description="ArkTS 鸿蒙项目调试器。该npm包通过研究 DevEco Studio 本体而诞生，感谢 github@sanchuanhehe的逆向成果。" />
-  <LinkCard title="@arkts/image-manager" href="https://github.com/ohosvscode/image-manager" description="模拟器镜像管理器, 用于管理模拟器镜像的下载、安装、删除等操作。该npm通过研究 DevEco Studio 本体而诞生。" />
+  <LinkCard title="@arkts/debugger" href="https://github.com/ohosvscode/debugger" description="鸿蒙 ArkTS 项目调试器。该 npm 包通过研究 DevEco Studio 本体而诞生，感谢 github@sanchuanhehe 的逆向成果。" />
+  <LinkCard title="@arkts/image-manager" href="https://github.com/ohosvscode/image-manager" description="鸿蒙模拟器镜像管理器, 用于管理鸿蒙模拟器镜像的下载、安装、删除等操作。该 npm 包通过研究 DevEco Studio 本体而诞生。" />
   <LinkCard title="@arkts/project-detector" href="https://github.com/ohosvscode/project-detector" description="基于 Rust 编写的项目分析器，指定一个基础工作目录，扫描此目录下所有鸿蒙工程，并提供 NAPI 绑定到 TypeScript。" />
-  <LinkCard title="@arkts/sdk-downloader" href="https://github.com/ohosvscode/sdk-downloader" description="OpenHarmony SDK 下载器，用于流式下载 OpenHarmony SDK, 并提供 github action 直接可用于你的 GitHub Action 的 CI/CD 流水线中。" />
+  <LinkCard title="@arkts/sdk-downloader" href="https://github.com/ohosvscode/sdk-downloader" description="OpenHarmony SDK 下载器，支持流式下载/接续下载 OpenHarmony SDK, 并提供 github action 直接可用于你的 GitHub Action 的 CI/CD 流水线中。" />
 </CardGrid>
 
 ## 核心仓库项目
